refactor + initial phase of taking in a json file and using that to generate multiple schema files at once
+ example schema file we're working with

--- a/tsent/cmd/generateschema/schema.tmpl
+++ b/tsent/cmd/generateschema/schema.tmpl
@@ -9,13 +9,13 @@
   fields: {{useImport "Field"}} [] = [
 
   {{ range $field := .Fields -}}
-    {{$imp := $field.Import -}}
+    {{$imp := $field.GetImport -}}
     {{ if $imp.DefaultImport -}}
       {{reserveDefaultImport $imp.ImportPath $imp.Import -}}
     {{ else -}}
       {{reserveImport $imp.ImportPath $imp.Import -}}
     {{ end -}}
-    {{useImport $imp.Import}}({{$field.FieldObjectCall}}),
+    {{useImport $imp.Import}}({{fieldObjectCall $field}}),
   {{ end -}}
   ];
 
