fix paths for generated files

--- a/internal/graphql/generate_schema.tmpl
+++ b/internal/graphql/generate_schema.tmpl
@@ -1,4 +1,4 @@
-import schema from "./schema";
+import schema from "./generated/schema";
 import {printSchema} from "graphql/utilities";
 import fs from "fs";
 
