--- a/internal/graphql/ts_templates/node.tmpl
+++ b/internal/graphql/ts_templates/node.tmpl
@@ -1,7 +1,7 @@
 {{reserveImport "graphql" "GraphQLSchema" "GraphQLObjectType" "GraphQLInputObjectType" "GraphQLID" "GraphQLString" "GraphQLEnumType" "GraphQLNonNull" "GraphQLList" "GraphQLFloat" "GraphQLInt" "GraphQLFieldConfig" "GraphQLFieldConfigMap" "GraphQLResolveInfo" "GraphQLInputFieldConfigMap" "GraphQLBoolean" }}
 {{reserveImport .Package.PackagePath "ID" "RequestContext" }}
 {{reserveImport .Package.GraphQLPackagePath "GraphQLTime" "GraphQLNodeInterface" "GraphQLEdgeInterface" "GraphQLConnectionInterface" "registerResolver" "EntNodeResolver" "resolveID" "nodeIDEncoder"}}
-{{reserveImport "src/ent/loadAny" "loadEntByType"}}
+{{reserveImport "src/ent/generated/loadAny" "loadEntByType"}}
 {{reserveImport "src/ent/" "NodeType" }}
 
 interface NodeQueryArgs {
