changes to graphql/codegen to tie it all together

--- a/internal/graphql/ts_templates/index.tmpl
+++ b/internal/graphql/ts_templates/index.tmpl
@@ -35,7 +35,7 @@ app.get("/healthz", async (req, res, params) => {
   }
 });
 
-function handleShutdown(signal) {
+function handleShutdown(signal: string) {
   server.close(() => {
     DB.getInstance()
       .endPool()
