make data protected in base classes so that subclasses have access to it and can expose it if they want.
need this to build something a simple version of something like edit history

--- a/internal/tscode/base.tmpl
+++ b/internal/tscode/base.tmpl
@@ -53,7 +53,7 @@ export class {{$baseClass}} {
     {{end -}}
   {{end}}
 
-  constructor(public viewer: {{$viewerType}}, data:{{$dataType}}) {
+  constructor(public viewer: {{$viewerType}}, protected data:{{$dataType}}) {
     {{range $field := .FieldInfo.Fields -}}
       {{$val := printf "data.%s" $field.GetDbColName -}}
       {{$convertType := convertFunc $field.GetFieldType -}}
