fix import of schema in index.ts

--- a/internal/graphql/ts_templates/index.tmpl
+++ b/internal/graphql/ts_templates/index.tmpl
@@ -1,6 +1,6 @@
 {{reserveDefaultImport "express" "express"}}
 {{reserveImport "express-graphql" "graphqlHTTP"}}
-{{reserveDefaultImport "./schema" "schema"}}
+{{reserveDefaultImport "./generated/schema" "schema"}}
 
 {{reserveImport "http" "IncomingMessage" "ServerResponse" }}
 {{reserveImport .Package "DB"}}
