--- a/internal/tscode/action_base.tmpl
+++ b/internal/tscode/action_base.tmpl
@@ -105,7 +105,7 @@
   {{ $hasSaveFromID = true}}
 {{end -}}
 
-{{ $inputData := useImport $builderInput -}}
+{{ $inputData := $builderInput -}}
 {{ if $hasInput -}}
   {{ $inputData = $inputName -}}
 {{ end -}}
