change generated loadMany API to a Map or {} (#623)
https://github.com/lolopinto/ent/issues/616

--- a/internal/tscode/base.tmpl
+++ b/internal/tscode/base.tmpl
@@ -100,12 +100,12 @@ export class {{$baseClass}} {
     this: {{$thisType}},
     viewer: {{$viewerType}},
     ...ids: {{$idType}}[]
-  ): Promise<T[]> {
+  ): Promise<Map<ID, T>> {
     return await {{useImport "loadEnts"}}(
       viewer, 
       {{$baseClass}}.loaderOptions.apply(this), 
       ...ids,
-    ) as T[];
+    ) as Map<ID, T>;
   }
 
   static async loadCustom<T extends {{$baseClass}}>(
