non-assoc edges

--- a/internal/tscode/ent_query_base.tmpl
+++ b/internal/tscode/ent_query_base.tmpl
@@ -109,12 +109,24 @@
     {{$name := printf "%sBase" $edge.TsEdgeQueryName -}}
     {{$srcNode := useImport $edge.GetSourceNodeName -}}
     {{$node := useImport $edge.GetNodeInfo.Node -}}
-    {{$thisType := printf "new (viewer: Viewer, src: %s | ID ) => T" $srcNode }}
+    {{$srcPoly := $edge.SourceIsPolymorphic -}}
+    {{$srcType := printf "%s | %s " $srcNode (useImport "ID") }}
+    {{ if $srcPoly -}}
+      {{$srcType = $srcNode }}
+    {{ end -}}
+
+    {{$thisType := printf "new (viewer: Viewer, src: %s  ) => T" $srcType }}
 
     export class {{$name}} extends {{useImport "CustomEdgeQueryBase"}}<{{$srcNode}}, {{$node}}> {
-      constructor(viewer: {{useImport "Viewer"}}, src: {{$srcNode}} | {{useImport "ID"}}) {
+    {{ if $srcPoly -}}
+      constructor(viewer: {{useImport "Viewer"}}, private srcEnt: {{$srcType }}) {
+        super(viewer, {
+          src: srcEnt, 
+    {{ else -}}
+      constructor(viewer: {{useImport "Viewer"}}, src: {{$srcType }}) {
         super(viewer, {
           src: src, 
+    {{ end -}}
           countLoaderFactory: {{$edge.GetCountFactoryName}},
           dataLoaderFactory: {{$edge.GetDataFactoryName}},
           options:{{$node}}.loaderOptions(), 
@@ -124,9 +136,17 @@
       static query<T extends {{$name}}>(
         this: {{$thisType}},
         viewer: {{useImport "Viewer"}},
-        src: {{$srcNode}} | {{useImport "ID"}},
+        src: {{$srcType}},
       ): T {
         return new this(viewer, src);
+      }
+
+      async sourceEnt(id: ID) {
+        {{ if $srcPoly -}}
+          return this.srcEnt;
+        {{ else -}}
+          return {{$srcNode}}.load(this.viewer, id);
+        {{ end -}}
       }
     }
 
