render description in generated code and old schema

--- a/internal/graphql/ts_templates/field.tmpl
+++ b/internal/graphql/ts_templates/field.tmpl
@@ -9,6 +9,9 @@
         {{$ignore := useImport $import.Type -}}
       {{end -}}
     {{end -}}
+    {{ if $field.Description -}}
+      description: "{{$field.Description}}",
+    {{end -}}
     type: {{$field.FieldType}},
     {{ template "render_args.tmpl" (dict "Base" $baseObj "Args" $field.Args) -}}
     {{if $field.ResolverMethod -}}
